# wmfire

./: .gitignore  CREDITS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.in  fireload_cpu.c  fireload_file.c  libtool  mkinstalldirs  wmfire.1  wmfire.c  wmfire_0.0.3.8.orig.tar.gz.delta  wmfire_0.0.3.8.orig.tar.gz.id  wmfire_0.0.3.9pre4.orig.tar.gz.delta  wmfire_0.0.3.9pre4.orig.tar.gz.id  wmfire_1.2.1.orig.tar.gz.delta  wmfire_1.2.1.orig.tar.gz.id  wmfire_1.2.2.orig.tar.gz.delta  wmfire_1.2.2.orig.tar.gz.id  wmfire_1.2.3.orig.tar.gz.delta  wmfire_1.2.3.orig.tar.gz.id  wmfire_1.2.4.orig.tar.gz.delta  wmfire_1.2.4.orig.tar.gz.id
debian/: changelog  control  copyright  cron.d.ex  dirs  docs  ex.doc-base.package  postinst  prerm  rules  watch  wmfire.1  wmfire.1x  wmfire.menu
debian/patches/: 00list  01_config.dpatch  01_resource.dpatch  01_resource.patch  02_resource.dpatch  03_gtk20.dpatch  fix_-Wunused-result.patch  fix_manpage.patch  freebsd_port.patch  gdk_updates.patch  rename_configure.patch  series  update_autotools.patch
debian/upstream/: signing-key.asc
src/: Makefile.in  wmfire.c
src/.deps/: session.Po  wmfire.Po
